# voitta-compute

./: .claudeignore  .env.example  .gitignore  DRIFT_NOTES.md  INTEGRATION.md  LICENSING.md  OPERATIONS.md  PROPOSAL-script-versioning.md  README.md  SERVERLESS_REPORT_PROPOSAL.md  build.sh  build_app.sh  pyproject.toml  server-start.sh  start.sh  streaming-migration.md  tray.sh
.claude/: settings.json
.handoffs/: 2026-05-08-bookmarklet-dogfood.md
backend/: pyproject.toml  run.sh
backend/app/: activity.py  agent.py  bookmarklets.py  bridge.py  certs.py  chainlit_app.py  config.py  desktop.py  desktop_launcher.py  install_window.py  installer.py  main.py  missing_frontend.html  plugins.py  rag_build.py  scripts_seed.py  sessions_window.py  settings.py
backend/app/bridge/: __init__.py  bus.py  models.py
backend/app/data/: local_storage.py  sqlite_layer.py
backend/app/reports/: __init__.py  ctx.py  dispatch.py  paths.py  render_events.py  sandbox.py  schemas.py  slug.py  store.py
backend/app/reports/renderers/: __init__.py  html.py
backend/app/routes/: agent_sdk.py  auth.py  chat.py  cli.py  google.py  html_report.py  mcp.py  plugins.py  providers.py  reports.py  settings.py  tools.py  workspace.py
backend/app/services/: _bokeh_ws_patch.py  a4db.py  cache_monitor.py  chrome_focus.py  cl_sessions.py  current_user.py  drive_pickup.py  ensure_local.py  flow_builder.py  flows.py  google_oauth.py  host_activation.py  login_auth.py  mcp_dumps.py  mcp_server.py  panel_app.py  panel_renderer.py  python_storage.py  python_storage_context.py  refs.py  render_events.py  render_log_drain.py  scripts.py  soundcheck_dat.py  user_settings.py  voice.py  voice_install.py  voice_wake.py
backend/app/services/agent_sdk/: __init__.py  bridge.py  config.py  credentials.py  errors.py  onboarding.py  runtime.py  selection.py  sessions.py
backend/app/services/llm/: __init__.py  anthropic.py  base.py  gemini.py  openai.py  stream.py
backend/app/services/mcp/: __init__.py  client.py  registry.py  tool_adapter.py
backend/app/services/resolvers/: __init__.py  drive.py  vre.py
backend/app/tools/: __init__.py  browser.py  load.py  registry.py
backend/app/tools/browser/: __init__.py  browser_eval.py  get_page_title.py
backend/app/tools/domain/: __init__.py  buffers.py  buffers_arrow.py  context.py  dom.py  flow.py  holoviz.py  python_storage.py  rag.py  report_edits.py  screenshot.py  scripts.py  theme.py  url_fetch.py  web.py
backend/app/tools/providers/: __init__.py
backend/app/tools/providers/drive/: __init__.py  context.py  page_scrape.py  tools.py
backend/app/tools/rag/: __init__.py  index.py  search.py
backend/app/tools/server/: now.py  pip_install.py  rag.py
backend/app/tools/server/scripts/: __init__.py  create_folder.py  define_script.py  delete_folder.py  delete_script.py  edit_script.py  get_active_report.py  get_script.py  get_script_errors.py  list_data.py  list_scripts.py  move_to_folder.py  preview_data.py  run_script.py  screenshot_report.py  verify_script.py
backend/certs/: 127.0.0.1+1-key.pem  127.0.0.1+1.pem
backend/tests/: conftest.py  test_artifacts_mutations.py  test_config.py  test_drive_context.py  test_mcp_route.py  test_plugin_system_prompt.py  test_plugins.py  test_providers.py  test_refs_and_ensure_local.py  test_registry.py
backend/tests/live/: conftest.py  test_live_anthropic.py  test_live_gemini.py  test_live_openai.py
backend/tests/rag/: conftest.py  test_chunker.py
backend/tests/reports/: test_dispatch.py  test_html_raw.py  test_html_route.py  test_render_events.py  test_sandbox.py  test_slug.py  test_store.py
backend/tests/services/: test_ensure_local_dispatch.py  test_host_activation.py  test_mcp_url_template.py  test_refs.py
backend/tests/streaming/: fake_provider.py  test_anthropic_normalisation.py  test_base_provider.py  test_cancellation.py  test_gemini_normalisation.py  test_openai_normalisation.py  test_orchestrator.py
backend/tests/tools/: test_host_filter.py  test_rag.py
backend/tests/tools/scripts/: test_define_script.py  test_edit_script.py
docs/: 00-overview.md  01-architecture.md  02-frontend.md  03-providers.md  04-tool-catalog.md  05-bridge-protocol.md  05-browser-eval.md  05-plugins.md  06-reports.md  07-report-scripts.md  07-workspace.md  09-panel-threejs-reports.md  10-a4db-files.md  11-desktop-app.md  12-dat-files.md  13-plugins.md  14-dmg-build-notes.md  15-theming-architecture.md  16-flow-reports.md  17-flow-authoring-guide.md  18-holoviz-authoring-guide.md  19-upstream-refs-and-ensure-local.md  README.md  elk-design-templates.md  panel-common-errors.md  panel-screenshot-limits.md  panel-skeleton.md  panel-snapshots.md  panel-theming.md  panel-three-scene.md  screenshot-friendly.md
docs/recipes/: README.md  elk-energy-monitor.md  elk.md  interactivity.md  knowledge-graph.md  matplotlib.md  mermaid.md  plotly.md  tables.md  theming.md  three.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: index.html
rag/: README.md  build_panel_rag.py  build_rag.py
scripts/: __init__.py  build_rag.py
tests/: test_cache_monitor.py  test_chat_history_replay.py  test_ctx_surface.py  test_mcp_cli_gate.py  test_mcp_tools.py  test_rag_panel_retrieval.py  test_render_log_drain.py  test_stage3_response_shape.py  test_user_settings_mcp_flag.py  test_verify_report.py
tools/: generate_icon.py  mkcert-arm64
(+193 files in other folders)
