[project]
name = "voitta-compute-backend"
version = "0.1.0"
description = "Voitta Compute backend — Chainlit-driven chat with agent-loop tool-use."
license = {text = "GNU Affero General Public License v3 or later (AGPLv3+)"}
requires-python = ">=3.11"
dependencies = [
  "chainlit>=2.0.0",
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "anthropic>=0.39",
  "openai>=1.50",
  "google-genai>=0.3",
  "python-multipart",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "pandas>=2.2",
  "numpy>=1.26",
  # RAG: hybrid dense (Chroma + sentence-transformers) + sparse (BM25).
  "chromadb>=0.5.20",
  "bm25s>=0.2.6",
  "PyStemmer>=2.2.0; platform_system != 'Windows'",
  # MCP (plugin-declared remote tool servers).
  "fastmcp>=2.0",
  # Google OAuth requests.
  "httpx>=0.27",
  # Menu-bar tray (macOS).
  "rumps>=0.4; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'",
  # Pillow — used by the agent loop to downsize captured screenshots
  # to webp before sending them to the LLM as inline images.
  "Pillow>=10",
  # Async SQLite driver + SQLAlchemy async core for conversation persistence.
  "aiosqlite>=0.17",
  "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]
desktop = [
  # Desktop packaging via briefcase (macOS .app / .dmg)
  "briefcase>=0.4.1",
  # Needed to pre-build the rumps sdist wheel before briefcase runs
  "build>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
